--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,6 @@
 /* 
     General Styles
 */
+body {
+ background-image: url("https://cutewallpaper.org/21/1920x1080-night-sky-wallpaper/Starry-Night-Sky-Wallpapers-72-background-pictures.jpg");
+}
