--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,3 +4,7 @@
 body {
  background-image: url("https://cutewallpaper.org/21/1920x1080-night-sky-wallpaper/Starry-Night-Sky-Wallpapers-72-background-pictures.jpg");
 }
+.mainDiv1{
+    height: 100%;
+    margin-bottom: 0;
+}
